; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/librtmp/extr_amf.c_AMF3ReadInteger.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/librtmp/extr_amf.c_AMF3ReadInteger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AMF3_INTEGER_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AMF3ReadInteger(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %34, %2
  %8 = load i32, i32* %5, align 4
  %9 = icmp sle i32 %8, 2
  br i1 %9, label %10, label %35

10:                                               ; preds = %7
  %11 = load i8*, i8** %3, align 8
  %12 = load i32, i32* %5, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8, i8* %11, i64 %13
  %15 = load i8, i8* %14, align 1
  %16 = sext i8 %15 to i32
  %17 = and i32 %16, 128
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %33

19:                                               ; preds = %10
  %20 = load i32, i32* %6, align 4
  %21 = shl i32 %20, 7
  store i32 %21, i32* %6, align 4
  %22 = load i8*, i8** %3, align 8
  %23 = load i32, i32* %5, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i8, i8* %22, i64 %24
  %26 = load i8, i8* %25, align 1
  %27 = sext i8 %26 to i32
  %28 = and i32 %27, 127
  %29 = load i32, i32* %6, align 4
  %30 = or i32 %29, %28
  store i32 %30, i32* %6, align 4
  %31 = load i32, i32* %5, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %5, align 4
  br label %34

33:                                               ; preds = %10
  br label %35

34:                                               ; preds = %19
  br label %7

35:                                               ; preds = %33, %7
  %36 = load i32, i32* %5, align 4
  %37 = icmp sgt i32 %36, 2
  br i1 %37, label %38, label %54

38:                                               ; preds = %35
  %39 = load i32, i32* %6, align 4
  %40 = shl i32 %39, 8
  store i32 %40, i32* %6, align 4
  %41 = load i8*, i8** %3, align 8
  %42 = getelementptr inbounds i8, i8* %41, i64 3
  %43 = load i8, i8* %42, align 1
  %44 = sext i8 %43 to i32
  %45 = load i32, i32* %6, align 4
  %46 = or i32 %45, %44
  store i32 %46, i32* %6, align 4
  %47 = load i32, i32* %6, align 4
  %48 = load i32, i32* @AMF3_INTEGER_MAX, align 4
  %49 = icmp sgt i32 %47, %48
  br i1 %49, label %50, label %53

50:                                               ; preds = %38
  %51 = load i32, i32* %6, align 4
  %52 = sub nsw i32 %51, 536870912
  store i32 %52, i32* %6, align 4
  br label %53

53:                                               ; preds = %50, %38
  br label %65

54:                                               ; preds = %35
  %55 = load i32, i32* %6, align 4
  %56 = shl i32 %55, 7
  store i32 %56, i32* %6, align 4
  %57 = load i8*, i8** %3, align 8
  %58 = load i32, i32* %5, align 4
  %59 = sext i32 %58 to i64
  %60 = getelementptr inbounds i8, i8* %57, i64 %59
  %61 = load i8, i8* %60, align 1
  %62 = sext i8 %61 to i32
  %63 = load i32, i32* %6, align 4
  %64 = or i32 %63, %62
  store i32 %64, i32* %6, align 4
  br label %65

65:                                               ; preds = %54, %53
  %66 = load i32, i32* %6, align 4
  %67 = load i32*, i32** %4, align 8
  store i32 %66, i32* %67, align 4
  %68 = load i32, i32* %5, align 4
  %69 = icmp sgt i32 %68, 2
  br i1 %69, label %70, label %71

70:                                               ; preds = %65
  br label %74

71:                                               ; preds = %65
  %72 = load i32, i32* %5, align 4
  %73 = add nsw i32 %72, 1
  br label %74

74:                                               ; preds = %71, %70
  %75 = phi i32 [ 4, %70 ], [ %73, %71 ]
  ret i32 %75
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
